[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Bloc_teleporteur_de_haut.gd" type="Script" id=2]
[ext_resource path="res://Art/yuck2.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 0.5, 0.5 )

[node name="Bloc_teleporteur_haut" type="Node2D"]
script = ExtResource( 2 )

[node name="Zone_tele" type="Area2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Zone_tele"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )

[node name="Collision_tele" type="CollisionShape2D" parent="Zone_tele"]
shape = SubResource( 2 )

[node name="Bloc_joueur" type="Area2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Bloc_joueur"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bloc_joueur"]
shape = SubResource( 4 )
[connection signal="body_entered" from="Zone_tele" to="." method="_on_Zone_tele_body_entered"]
[connection signal="body_exited" from="Zone_tele" to="." method="_on_Zone_tele_body_exited"]
[connection signal="body_entered" from="Bloc_joueur" to="." method="_on_Bloc_joueur_body_entered"]
